# psudo

./: .env.production  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  app.yaml  deploy.sh  dispatch.yaml  index.html  nginx.conf  package-lock.json  package.json  test.json  vite.config.js  vite.config.js.timestamp-1699908855884.mjs
.github/workflows/: deploy.yml
env/: .env.production
lib/: Cargo.toml  LICENSE  README.md
lib/src/: lib.rs  old.txt
lib/src/c3/: mod.rs
lib/src/compute/: mix_and_color.wgsl  mod.rs  saturated.wgsl  shader.wgsl
notebooks/: Histogram.ipynb  TestOutput.ipynb  combined_with_signal.csv  crop.ipynb  data.json  display_pixels_in_lens.ipynb  gmm.ipynb  intensities.json  lens.ipynb  lines.ipynb  notebooks.ipynb  optimization.ipynb  tiff.js  values.csv  x_y_intensity.json
oldlib/: Cargo.toml  LICENSE_MIT
oldlib/src/: lib.rs
oldlib/src/c3/: mod.rs
oldlib/src/compute/: diff.wgsl  mix_and_color.wgsl  mod.rs  srgb_ciexyz.wgsl
oldlib/src/sa/: mod.rs
psudo-study-data/: single-channel-trial-data.json  test-run.json
public/: LabsHeader.ai
src/: App.css  App.jsx  index.css  main.jsx
src/Avivator/: Avivator.css  Avivator.jsx  IndividualChannelsWrapper.jsx  MinervaVivLensing.jsx  MiniAvivator.jsx  RoutedAvivator.jsx  constants.js  hooks.js  state.js  viewerUtils.js
src/Avivator/components/: DropzoneWrapper.jsx  Footer.jsx  Viewer.jsx
src/Avivator/components/Controller/: Controller.jsx
src/Avivator/components/Controller/components/: AddChannel.jsx  (+7 more)
src/Avivator/components/Snackbars/: SnackbarAlerts.jsx  Snackbars.jsx
src/components/: ChannelColorDisplay.jsx  ChannelList.jsx  ColorLegend.jsx  ColorNameSelect.css  ColorNameSelect.jsx  Dialog.jsx  GaugeCharts.jsx  LineChart.jsx  LoadingOverlay.jsx  PastPalettes.jsx  PngCanvas.jsx  PsudoToolbar.jsx  SingleChannelWrapper.jsx
src/components/shaders/: index.js  utils.js
src/components/shaders/color-mixing-extension/: color-mixing-extension.js
src/components/shaders/conversion/: hsl_to_lrgb.glsl  lab_to_lrgb.glsl  lab_to_xyz.glsl  lrgb_to_hsl.glsl  lrgb_to_srgb.glsl  lrgb_to_xyz.glsl  oklab_to_xyz.glsl  srgb_to_lrgb.glsl  xyz_to_lab.glsl  xyz_to_lrgb.glsl  xyz_to_oklab.glsl
src/components/shaders/fragment-shaders/: lab-color-mixing-fs.glsl  linear-rgb-color-mixing-fs.glsl  oklab-color-mixing-fs-gamut_clip_adaptive_L0_0_5.glsl  oklab-color-mixing-fs.glsl  oklab-color-mixing-fs_gamut_clip_adaptive_L0_L_cusp.glsl  oklab-color-mixing-fs_gamut_clip_preserve_chroma.glsl  oklab-color-mixing-fs_gamut_clip_project_to_0_5.glsl  oklab-color-mixing-fs_gamut_clip_project_to_L_cusp.glsl  rgb-color-mixing-fs.glsl  test-1-fs.glsl  test-2-fs.glsl
src/components/shaders/gamut_clipping/: find_cusp.glsl  find_gamut_intersection.glsl  gamut_clip_adaptive_L0_0_5.glsl  gamut_clip_adaptive_L0_L_cusp.glsl  gamut_clip_preserve_chroma.glsl  gamut_clip_project_to_0_5.glsl  gamut_clip_project_to_L_cusp.glsl
src/components/shaders/reference/: ColorSpaces.inc.glsl  glcolortest.glsl  rgb_xyz_lab.glsl
src/context/: GlobalContext.jsx
