[package]
name = "lib"
version = "0.1.0"
authors = ["Simon Warchol <simonwarchol@g.harvard.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
ndarray = "0.15.6"
rayon = "1.8.0"
linfa = "0.6.1"
linfa-clustering = "0.6.1"
statrs = "0.16.0"
imp = "0.1.0"
js-sys = "0.3.64"

getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = ["console"]}
ndarray-stats = "0.5.1"
rand = "0.8.5"
palette = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typenum = "1.17.0"
kd-tree = "0.5.1"
argmin = "0.8.1"
instant = { version = "0.1", features = [ "wasm-bindgen"]}


rand_xoshiro = "0.6.0"
libc = "0.2.150"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
